--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>Школьники(6классов) и вирусы сети и защита от них</title>
 </head>
 <body bgcolor="#B0E0E6">
+<h4>Виды вирусы</h4>
+<li><a href="опасные вирусы.html">Опасные вирусы</a></li>
+<li><a href="безопасные вирусы.html">Безопасные вирусы</a></li>
 <h1 align="center"><b><u><font size="20">Вирусы в сети и их виды.</h1></b></u></font>
 <p1 align="left"><font size="10">Вирус-червь — это тип вредоносных программ, которые могут копировать себя и часто распространяются по сети, используя уязвимости безопасности. Он может распространяться по вложениям электронной почты, текстовым сообщениям, программам общего доступа к файлам, сайтам социальных сетей, сетевым ресурсам, съемным дискам и уязвимостям программного обеспечения. Worms представляют собой большую категорию вредоносных программ.
 </p1></font>
