--- a/безопасные вирусы.html
+++ b/безопасные вирусы.html
@@ -3,6 +3,8 @@
 <title>Безопасные вирусы</title>
 </head>
 <body bgcolor="#B0E0E6">
+<li><a href="опасные вирусы.html">Опасные вирусы</a></li>
+<li><a href="index.html">популярные вирусы</a></li>
 <h1 align="center"><b><u><font size="20">The Creeper (1971)</h1></b></u></font>
 <p1 align="left"><font size="10">Первый в истории действующий компьютерный вирус был больше академическим исследованием и, как и стоит ожидать в таком случае, был в целом безвреден. Он назывался Creeper («Ползун») и был создан более 40 лет назад сотрудником американского оборонного агентства DARPA (Defense Advanced Research Projects Agency). Это был примитивный червь, который искал в сети другие компьютеры (а сети тогда были локальными и небольшими) и копировал себя на новые машины. На «старой» зараженной машине выводилось сообщение: «I’M THE CREEPER: CATCH ME IF YOU CAN» («Поймай меня, если сможешь»), а на новой вирус проверял наличие своей копии, чтобы избежать двойного заражения.
 </p1></font>
