--- a/опасные вирусы.html
+++ b/опасные вирусы.html
@@ -3,6 +3,8 @@
 <title>Опасные вирусы</title>
 </head>
 <body bgcolor="#B0E0E6">
+<li><a href="безопасные вирусы.html">Безопасные вирусы</a></li>
+<li><a href="index.html">популярные вирусы</a></li>
 <h1 align="center"><b><u><font size="20">Storm Worm</h1></b></u></font>
 <p1 align="left"><font size="10">Storm (также известен как Storm Worm) — троянская программа и ботнет, созданный для кражи личных данных. Начал своё распространение 19 января 2007 года и за короткий срок атаковал как минимум 1,6 млн компьютеров в более чем 80 странах, включив их в ботнет. Он способен заражать системы Windows 2000, Windows XP и Windows Vista.
 </p1></font>
